Refactoring app component: app-meeting-list

--- a/Angular7-WebAPI-Calendar/ClientApp/src/app/app.component.html
+++ b/Angular7-WebAPI-Calendar/ClientApp/src/app/app.component.html
@@ -16,27 +16,8 @@
   <app-calendar-nav-bar></app-calendar-nav-bar>
 
   <div class="row">
-    <div class="col-md-12">
 
-      <div class="col-md-6">
-        <p>
-          Meeting List
-        </p>
-        <ul>
-          <li>
-            <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
-          </li>
-          <li>
-            <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
-          </li>
-          <li>
-            <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
-          </li>
-          <li>
-            <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
-          </li>
-        </ul>
-      </div>
+      <app-meeting-list></app-meeting-list>
 
       <div class="col-md-6">
         <div>Description: <p>Project meeting</p></div>
@@ -52,6 +33,6 @@
           </ul>
         </div>
       </div>
-    </div>
+
   </div>
 </div>
