Month navigation bar routing

--- a/Angular7-WebAPI-Calendar/ClientApp/src/app/app.component.html
+++ b/Angular7-WebAPI-Calendar/ClientApp/src/app/app.component.html
@@ -1,9 +1,7 @@
-
 <div class='container-fluid'>
   <app-page-header></app-page-header>
   <app-calendar-nav-bar></app-calendar-nav-bar>
   <div class="row">
-    <app-meeting-list></app-meeting-list>
-    <app-meeting-details></app-meeting-details>
+    <router-outlet></router-outlet>
   </div>
 </div>
