--- a/Angular7-WebAPI-Calendar/ClientApp/src/app/meeting-list/meeting-list.component.html
+++ b/Angular7-WebAPI-Calendar/ClientApp/src/app/meeting-list/meeting-list.component.html
@@ -1,19 +1,3 @@
 <div class="col-md-6">
-  <p>
-    Meeting List
-  </p>
-  <ul>
-    <li>
-      <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
-    </li>
-    <li>
-      <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
-    </li>
-    <li>
-      <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
-    </li>
-    <li>
-      <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
-    </li>
-  </ul>
+  {{selectedMonth}}
 </div>
