--- a/Angular7-WebAPI-Calendar/ClientApp/src/app/meeting-details/meeting-details.component.html
+++ b/Angular7-WebAPI-Calendar/ClientApp/src/app/meeting-details/meeting-details.component.html
@@ -1,3 +1,14 @@
-<p>
-  meeting-details works!
-</p>
+<div class="col-md-6">
+  <div>Description: <p>Project meeting</p></div>
+  <div>Date: <p>028/19/2014 12:00 PM</p></div>
+  <div>Organizer: <p>John Someone</p></div>
+  <div>
+    Attendees:
+    <ul>
+      <li>Attendee 1</li>
+      <li>Attendee 2</li>
+      <li>Attendee 3</li>
+      <li>Attendee 4</li>
+    </ul>
+  </div>
+</div>
