--- a/Angular7-WebAPI-Calendar/ClientApp/src/app/page-header/page-header.component.html
+++ b/Angular7-WebAPI-Calendar/ClientApp/src/app/page-header/page-header.component.html
@@ -1,3 +1,12 @@
-<p>
-  page-header works!
-</p>
+<div class="row">
+  <div class='col-md-8'>
+    Calendar
+  </div>
+  <div class="col-md-4">
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-secondary">Home</button>
+      <button type="button" class="btn btn-secondary">About</button>
+      <button type="button" class="btn btn-secondary">Calednar</button>
+    </div>
+  </div>
+</div>
