--- a/Angular7-WebAPI-Calendar/ClientApp/src/app/meeting-list/meeting-list.component.html
+++ b/Angular7-WebAPI-Calendar/ClientApp/src/app/meeting-list/meeting-list.component.html
@@ -1,3 +1,8 @@
 <div class="col-md-6">
-  {{selectedMonth}}
+
+  <ul>
+    <li *ngFor="let meeting of selectedData">
+      <span>{{meeting.date | date:'MM-dd-yyyy'}}   </span><a href="#">{{meeting.name}}</a>
+    </li>
+  </ul>
 </div>
