Refactor FakeRepository - Show attendees data in the client app

--- a/Angular7-WebAPI-Calendar/ClientApp/src/app/meeting-details/meeting-details.component.html
+++ b/Angular7-WebAPI-Calendar/ClientApp/src/app/meeting-details/meeting-details.component.html
@@ -1,3 +1,9 @@
 <div class="col-md-6">
   {{selectedMeeting.name}}
+  <p>Attendees</p>
+  <ul>
+    <li *ngFor="let attendee of selectedMeeting.attendees">
+      {{attendee.name}}
+    </li>
+  </ul>
 </div>
